[gd_scene load_steps=5 format=3 uid="uid://b8jbowdnorp1f"]

[ext_resource type="Script" uid="uid://dkwxukji4mmmu" path="res://Utilities/pause_menu/pause_menu.gd" id="1_52f8u"]
[ext_resource type="Theme" uid="uid://dr1yk2pxxkcq3" path="res://Assets/theme.tres" id="2_qpukh"]
[ext_resource type="PackedScene" uid="uid://ica25dt1nph6" path="res://Utilities/pause_menu/input_menu/input_rebinding_menu.tscn" id="3_ua3y5"]
[ext_resource type="PackedScene" uid="uid://b7mfbhjbnelg1" path="res://Utilities/pause_menu/graphics_menu/graphics_settings.tscn" id="4_53meo"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_52f8u")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 250

[node name="MainPauseMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PausedText" type="Label" parent="MarginContainer/MainPauseMenu"]
layout_mode = 2
theme = ExtResource("2_qpukh")
text = "paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/MainPauseMenu" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
theme = ExtResource("2_qpukh")
text = "resume"

[node name="SettingsButton" type="Button" parent="MarginContainer/MainPauseMenu" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("2_qpukh")
text = "settings"

[node name="QuitButton" type="Button" parent="MarginContainer/MainPauseMenu" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
theme = ExtResource("2_qpukh")
text = "quit"

[node name="SettingsMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="InputButton" type="Button" parent="MarginContainer/SettingsMenu" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../SettingsBackButton")
focus_neighbor_bottom = NodePath("../GraphicsButton")
theme = ExtResource("2_qpukh")
text = "inputs"

[node name="GraphicsButton" type="Button" parent="MarginContainer/SettingsMenu" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../InputButton")
focus_neighbor_bottom = NodePath("../VolumeSlider")
theme = ExtResource("2_qpukh")
text = "video"

[node name="VolumeText" type="Label" parent="MarginContainer/SettingsMenu"]
layout_mode = 2
theme = ExtResource("2_qpukh")
text = "volume"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/SettingsMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("../SettingsBackButton")
value = 75.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="VolumeNumber" type="Label" parent="MarginContainer/SettingsMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_bottom = NodePath("../SettingsBackButton")
theme = ExtResource("2_qpukh")
theme_override_font_sizes/font_size = 20
text = "75"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/SettingsMenu"]
layout_mode = 2

[node name="SettingsBackButton" type="Button" parent="MarginContainer/SettingsMenu" groups=["buttons"]]
layout_mode = 2
focus_neighbor_top = NodePath("../VolumeSlider")
focus_neighbor_bottom = NodePath("../InputButton")
theme = ExtResource("2_qpukh")
text = "back"

[node name="InputMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="InputRebinding" parent="MarginContainer/InputMenu" instance=ExtResource("3_ua3y5")]
custom_minimum_size = Vector2(0, 520)
layout_mode = 2
size_flags_vertical = 3

[node name="InputBackButton" type="Button" parent="MarginContainer/InputMenu" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_qpukh")
text = "back"

[node name="GraphicsMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="GraphicsSettings" parent="MarginContainer/GraphicsMenu" instance=ExtResource("4_53meo")]
custom_minimum_size = Vector2(0, 520)
layout_mode = 2

[node name="GraphicsBackButton" type="Button" parent="MarginContainer/GraphicsMenu" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_qpukh")
text = "back"

[node name="QuitMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="AreYouSureText" type="Label" parent="MarginContainer/QuitMenu"]
layout_mode = 2
theme = ExtResource("2_qpukh")
text = "are you sure you want to quit?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/QuitMenu"]
layout_mode = 2

[node name="YesQuitButton" type="Button" parent="MarginContainer/QuitMenu/HBoxContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../NoQuitButton")
focus_neighbor_right = NodePath("../NoQuitButton")
theme = ExtResource("2_qpukh")
text = "yes"

[node name="NoQuitButton" type="Button" parent="MarginContainer/QuitMenu/HBoxContainer" groups=["buttons"]]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../YesQuitButton")
focus_neighbor_right = NodePath("../YesQuitButton")
theme = ExtResource("2_qpukh")
text = "no"

[node name="Audio" type="Node" parent="."]

[node name="ClickSound" type="FmodEventEmitter3D" parent="Audio"]
event_name = "event:/000_SFX/000_Demo_Test/007_SFX_UIClick"
event_guid = "{e96fe609-82c4-494e-9458-401b87f34d25}"
unique_name_in_owner = true

[connection signal="pressed" from="MarginContainer/MainPauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainPauseMenu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainPauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/SettingsMenu/InputButton" to="." method="_on_input_button_pressed"]
[connection signal="pressed" from="MarginContainer/SettingsMenu/GraphicsButton" to="." method="_on_graphics_button_pressed"]
[connection signal="drag_ended" from="MarginContainer/SettingsMenu/VolumeSlider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/SettingsMenu/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/SettingsMenu/SettingsBackButton" to="." method="_on_settings_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/InputMenu/InputBackButton" to="." method="_on_input_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/GraphicsMenu/GraphicsBackButton" to="." method="_on_graphics_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/QuitMenu/HBoxContainer/YesQuitButton" to="." method="_on_yes_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/QuitMenu/HBoxContainer/NoQuitButton" to="." method="_on_no_quit_button_pressed"]
